--- a/css/templatemo-topic-listing.css
+++ b/css/templatemo-topic-listing.css
@@ -11,10 +11,10 @@ https://templatemo.com/tm-590-topic-listing
 -----------------------------------------*/
 :root {
   --white-color:                  #ffffff;
-  --primary-color:                #13547a;
-  --secondary-color:              #80d0c7;
+  --primary-color:                #000000;
+  --secondary-color:              #FF6A00;
   --section-bg-color:             #f0f8ff;
-  --custom-btn-bg-color:          #80d0c7;
+  --custom-btn-bg-color:          #FF6A00;
   --custom-btn-bg-hover-color:    #13547a;
   --dark-color:                   #000000;
   --p-color:                      #717275;
@@ -147,7 +147,7 @@ strong {
 }
 
 .section-overlay {
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  background-image: linear-gradient(15deg, #13547a 0%, #FF6A00 100%);
   position: absolute;
   top: 0;
   left: 0;
@@ -248,7 +248,7 @@ strong {
   SITE HEADER              
 -----------------------------------------*/
 .site-header {
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  background-image: linear-gradient(15deg, #13547a 0%, #FF6A00 100%);
   padding-top: 150px;
   padding-bottom: 80px;
 }
@@ -486,7 +486,7 @@ strong {
   HERO        
 -----------------------------------------*/
 .hero-section {
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
+  background-image: linear-gradient(15deg, #FF8A00 0%, #FF6A00 100%);
   position: relative;
   overflow: hidden;
   padding-top: 150px;
@@ -616,7 +616,7 @@ strong {
 }
 
 .bg-design {
-  background-color: #00B0FF;
+  background-color: #FF6A00;
 }
 
 .bg-graphic {
